* changing default imdb site from us.imdb.com to akas.imdb.com to also find
  localized AKAs
+ new method movieconnection() returns connected movies (mid, name, year and
  maybe comment)
+ new method extReviews() returns external reviews for this movie (url,desc)
* some code cleanup, optimization and comments
* minor optical enhancements to the demo pages

v0.9.2 (13.03.2008)
-------------------
* replacing strpos..substr loops in several functions by preg_match_all constructs
! runtime was broken for some movies (errors on the IMDB pages?)
+ added soundtrack() method for guess what...
! setid() forgot to reset some credits - fixed.
* no more duplicate IMDB IDs are displayed anymore (thanx to Josh for pointing this out!)
! the result set limit ($maxresults) was not honored (again Josh - thanx!)

v0.9.1 (20.01.2008)
-------------------
! year was screwed up when movie title contained "()"
! method rating() did not return any value on subsequent calls (only on the first)
+ added support for retrieving trailer urls (method trailers())
+ added retrieval of 'Crazy Credits' (try with 'The Blues Brothers', they have some)
+ added goof retrieval (again, you can see some with 'The Blues Brothers')
* some cleanup
* moved error message output into debug methods so they can be turned off
  (do so in imdb_config.php with the $this->debug setting)
+ added method trivia() to retrieve the trivias

v0.9.0 (06.01.2008)
-------------------
! link to SearchPlotWriters was pointing to wrong server
+ added gzip support to cache (Jörg Eitemüller)
+ added support for tv series (Jörg Eitemüller) - new methods:
  episodes() and seasons()
! fixed bug concerning genre parsing
+ added support for retrieving the movie quotes - method: quotes()

v0.8.9 (07.10.2007)
-------------------
* genre and country often contained a stupid additional field pointing to some
  "Imdb sections". Changed the code so they are no longer there.