@@ -1017,6 +1017,14 @@
     $this->imdb_config();
   }
 
+  /** Search for episodes (true) or movies (false - default)
+   * @method search_episodes
+   * @param boolean enabled
+   */
+  function search_episodes($enable) {
+    $this->episode_search = $enable;
+  }
+
   /** Set the name (title) to search for
    * @method setsearchname
    */
@@ -1042,13 +1050,16 @@
     $url = $this->url;
    }else{
      if (!isset($this->maxresults)) $this->maxresults = 20;
-     switch ($this->searchvariant) {
-       case "moonface" : $query = ";more=tt;nr=1"; // @moonface variant (untested)
-       case "sevec"    : $query = "&restrict=Movies+only&GO.x=0&GO.y=0&GO=search;tt=1"; // Sevec ori
-       default         : $query = ";tt=on"; // Izzy
-     }
      if ($this->maxresults > 0) $query .= ";mx=20";
-     $url = "http://".$this->imdbsite."/find?q=".urlencode($this->name).$query;
+     if ($this->episode_search) $url = "http://".$this->imdbsite."/find?q=".urlencode($this->name).$query.";s=ep";
+     else {
+       switch ($this->searchvariant) {
+         case "moonface" : $query = ";more=tt;nr=1"; // @moonface variant (untested)
+         case "sevec"    : $query = "&restrict=Movies+only&GO.x=0&GO.y=0&GO=search;tt=1"; // Sevec ori
+         default         : $query = ";tt=on"; // Izzy
+       }
+       $url = "http://".$this->imdbsite."/find?q=".urlencode($this->name).$query;
+     }
    }
    return $url;
   }
