@@ -8,6 +8,8 @@ v0.9.3
 + new method extReviews() returns external reviews for this movie (url,desc)
 * some code cleanup, optimization and comments
 * minor optical enhancements to the demo pages
++ imdbsearch class: added method search_episodes to restrict the search to
+  either movies or episodes (before it was always restricted to movies)
 
 v0.9.2 (13.03.2008)
 -------------------
